force-app/main/default/objects/Zoom_Meeting_Detail__c/Zoom_Meeting_Detail__c.object-meta.xml
<CustomObject>
    <label>Zoom Meeting Detail</label>
    <nameField>
        <displayFormat>ZMDC-{000000000}</displayFormat>
        <label>Zoom Meeting Details Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zoom Meeting Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>