force-app/main/default/objects/Zoom_Meeting_Detail__c/fields/Join_Time__c.field-meta.xml
<CustomField>
    <fullName>Join_Time__c</fullName>
    <label>Join Time</label>
    <type>DateTime</type>
</CustomField>