force-app/main/default/objects/Zoom_Meeting_Detail__c/fields/Participating_Lead__c.field-meta.xml
<CustomField>
    <fullName>Participating_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participating Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Past_Zoom_Meetings_Lead</relationshipName>
    <type>Lookup</type>
</CustomField>