force-app/main/default/objects/Zoom_Meeting_Detail__c/fields/Zoom_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Meeting__c</fullName>
    <label>Zoom Meeting</label>
    <referenceTo>Zoom_Meeting__c</referenceTo>
    <relationshipName>Past_Zoom_Meetings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>