force-app/main/default/objects/Zoom_Meeting_Detail__c/validationRules/Only_One_Participant_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_One_Participant_Type</fullName>
    <active>true</active>
    <description>This validation rule is used to make sure that only one type of participant can be provided for a record.</description>
    <errorConditionFormula>OR(
					AND(NOT(ISBLANK(Participating_Contact__c)), NOT(ISBLANK(Participating_Lead__c))),
					AND(NOT(ISBLANK(Participating_Lead__c)), NOT(ISBLANK(Participating_User__c))),
					AND(NOT(ISBLANK(Participating_User__c)), NOT(ISBLANK(Participating_Contact__c)))
			)</errorConditionFormula>
    <errorMessage>Please make sure that only one type of participant (Contact/Lead/User) should be provided for the record!</errorMessage>
</ValidationRule>